--- a/frontend/src/assets/scss/light.module.scss
+++ b/frontend/src/assets/scss/light.module.scss
@@ -14,6 +14,9 @@ $icon-background: rgb(255 255 255);
 $bottom-menu-background: rgb(225 230 237 / 60%);
 $sidebar-background: rgb(225 230 237);
 $dropdown-background-color: #fff;
+$cockpit-input-background: rgb(243, 243, 243);
+$cockpit-element-background: rgb(243, 243, 243);
+$cockpit-chip-background: rgb(225, 230, 237);
 
 :export {
     backgroundColor: $background-color;
@@ -32,5 +35,8 @@ $dropdown-background-color: #fff;
     bottomMenuBackground: $bottom-menu-background;
     sidebarBackground: $sidebar-background;
     dropdownBackgroundColor: $dropdown-background-color;
+    cockpitInputBackground: $cockpit-input-background;
+    cockpitElementBackground: $cockpit-element-background;
+    cockpitChipBackground: $cockpit-chip-background;
 }
 
